fixed ALPN/HTTP2, CORS tweaks

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,5 @@
 # FROM openresty/openresty:1.11.2.2-alpine
-FROM nginx:1.11-alpine
+FROM justsml/docker-nginx
 
 MAINTAINER Dan Levy <Dan@DanLevy.net>
 
@@ -10,7 +10,7 @@ COPY ./entrypoint.sh ./
 EXPOSE 80 443
 
 # RUN apt-get update && apt-get install apache2-utils openssl -y
-RUN apk update && apk add bash && apk add apache2-utils && apk add openssl
+RUN apk --update add bash apache2-utils openssl
 
 ENTRYPOINT /www/entrypoint.sh
 
