gzip w/ fast compression

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -10,7 +10,7 @@ COPY ./entrypoint.sh ./
 EXPOSE 80 443
 
 # RUN apt-get update && apt-get install apache2-utils openssl -y
-RUN apk --update add bash apache2-utils openssl
+RUN apk --update add bash apache2-utils openssl-dev
 
 ENTRYPOINT /www/entrypoint.sh
 
